PHP                                                                        NEWS
|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
?? ??? 2015 PHP 5.4.40

- GD:
  . Fixed bug #68601 (buffer read overflow in gd_gif_in.c). (Remi)

- SOAP:
  . Fixed bug #69152 (Type Confusion Infoleak Vulnerability in unserialize()
    with SoapFault). (Dmitry)

- Postgres:
  . Fixed bug #68741 (Null pointer deference) (CVE-2015-1352). (Xinchen Hui)

19 Mar 2015 PHP 5.4.39

- Core:
  . Fixed bug #68976 (Use After Free Vulnerability in unserialize())
    (CVE-2015-0231). (Stas)
  . Fixed bug #69134 (Per Directory Values overrides PHP_INI_SYSTEM
    configuration options). (Anatol Belski)
  . Fixed bug #69207 (move_uploaded_file allows nulls in path). (Stas)

- Ereg:
  . Fixed bug #69248 (heap overflow vulnerability in regcomp.c) (CVE-2015-2305).
    (Stas)

- SOAP:
  . Fixed bug #69085 (SoapClient's __call() type confusion through
    unserialize()). (Dmitry)

- ZIP:
  . Fixed bug #69253 (ZIP Integer Overflow leads to writing past heap
    boundary) (CVE-2015-2331). (Stas)

19 Feb 2015 PHP 5.4.38

- Core:
  . Removed support for multi-line headers, as the are deprecated by RFC 7230.
    (Stas)
  . Added NULL byte protection to exec, system and passthru. (Yasuo)
  . Fixed bug #68925 (Mitigation for CVE-2015-0235 – GHOST: glibc gethostbyname
    buffer overflow). (Stas)
  . Fixed bug #67827 (broken detection of system crypt sha256/sha512 support).
    (ncopa at alpinelinux dot org)  
  . Fixed bug #68942 (Use after free vulnerability in unserialize() with
    DateTimeZone). (CVE-2015-0273) (Stas)
  
- Enchant: 
  . Fixed bug #68552 (heap buffer overflow in enchant_broker_request_dict()).
    (Antony)

- SOAP:
  . Fixed bug #67427 (SoapServer cannot handle large messages)
    (brandt at docoloc dot de)

22 Jan 2015 PHP 5.4.37
- Core:
  . Fixed bug #68710 (Use After Free Vulnerability in PHP's unserialize()).
    (CVE-2015-0231) (Stefan Esser)

- CGI: